# MLXR

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  PLAN_REVIEW_REPORT.md  README.md  SETUP.md  TODO.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: ACTIONS_GUIDE.md
.github/actions/build-cpp-core/: action.yml
.github/actions/build-metal-kernels/: action.yml
.github/actions/setup-build-env/: action.yml
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: README.md  ci.yml  codeql-analysis.yml  codeql.yml  daemon-test.yml  download-models.yml  grpc-server-tests.yml  release.yml  test-with-models.yml.example
app/macos/: README.md  STATUS.md  TESTING.md  project.yml
app/macos/MLXR/: Info.plist  MLXR.entitlements
app/macos/MLXR.xcodeproj/: project.pbxproj
app/macos/MLXR/App/: AppDelegate.swift
app/macos/MLXR/Bridge/: BridgeInjector.js  HostBridge.swift  MessageHandlers.swift  UnixSocketClient.swift
app/macos/MLXR/Controllers/: MainWindowController.swift  TrayController.swift  WebViewController.swift
app/macos/MLXR/Daemon/: DaemonManager.swift  (+2 more)
app/macos/MLXRTests/: BridgeTests.swift  DaemonManagerTests.swift  IntegrationTests.swift  ServicesTests.swift
app/ui/: .eslintrc.json  COMPONENTS.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
app/ui/src/: App.tsx  main.tsx  vite-env.d.ts
cmake/: FindMLX.cmake  FindSentencePiece.cmake
configs/: server.yaml
configs/models/: llama-3-8b.yaml  mistral-7b.yaml  tinyllama-1.1b.yaml
core/: CMakeLists.txt
core/graph/: attention_cached.cpp  attention_cached.h  layers.cpp  layers.h  model.cpp  model.h  tensor.cpp  tensor.h
core/kernels/metal/: attention_decode.metal  attention_prefill.metal  hello_world.metal  q_gemm_dequant.metal  rmsnorm.metal  rope_apply.metal  swiglu_mlp_fused.metal
core/kernels/primitives/: attention_decode_primitive.h  attention_decode_primitive.mm  attention_prefill_primitive.h  attention_prefill_primitive.mm  q_gemm_dequant_primitive.h  q_gemm_dequant_primitive.mm  rmsnorm.cpp  rmsnorm.h  rmsnorm_primitive.h  rmsnorm_primitive.mm  rope_apply_primitive.h  rope_apply_primitive.mm  swiglu_mlp_primitive.h  swiglu_mlp_primitive.mm
core/kernels/wrappers/: metal_kernel_base.h  metal_kernel_base.mm  rmsnorm_kernel.h  rmsnorm_kernel.mm
core/runtime/: engine.cpp  engine.h  mmap_loader.cpp  mmap_loader.h  sampler.cpp  sampler.h  tokenizer.cpp  tokenizer.h
core/runtime/kv/: arena.cpp  arena.h  eviction.cpp  eviction.h  pager.cpp  pager.h
core/runtime/spec/: speculative_decoder.cpp  speculative_decoder.h
core/runtime/tokenizer/: tokenizer.cpp
daemon/: CMakeLists.txt  test_daemon_main.cpp
daemon/registry/: gguf_parser.cpp  gguf_parser.h  model_registry.cpp  model_registry.h
daemon/scheduler/: request.h  scheduler.cpp  scheduler.h
daemon/server/: grpc_server.cpp  grpc_server.h  model_loader.cpp  model_loader.h  ollama_api.cpp  ollama_api.h  rest_server.cpp  rest_server.h  scheduler_worker.cpp  scheduler_worker.h  sse_stream.cpp  sse_stream.h
daemon/server/proto/: mlxrunner.proto
daemon/telemetry/: metrics.cpp  metrics.h
docs/: ATTENTION_ARCHITECTURE_ANALYSIS.md  ATTENTION_KERNEL_INTEGRATION_FINDINGS.md  ATTENTION_KERNEL_STATUS.md  CODE_REVIEW_IMPROVEMENTS.md  CODE_REVIEW_ROUND_2_IMPROVEMENTS.md  DAEMON_STATUS.md  FRONTEND_COMPLETION.md  GQA_RESHAPE_FIX.md  IMPLEMENTATION_STATUS.md  KV_CACHE_IMPLEMENTATION.md  MACOS_APP_COMPLETION.md  METAL_BUFFER_INTEGRATION_PLAN.md  METAL_KERNEL_INTEGRATION_FINDINGS.md  METAL_KERNEL_STATUS.md  PHASE1_COMPLETION.md  PHASE1_METAL_KERNEL_FIX.md  PHASE1_METAL_KERNEL_STATUS.md  PHASE1_METAL_RMSNORM_COMPLETION.md  PHASE1_ZERO_COPY_OPTIMIZATION.md  PHASE2_COMPLETION.md  PHASE2_CURRENT_STATUS.md  PHASE2_KV_CACHE_COMPLETION.md  PHASE2_KV_CACHE_VALIDATION.md  PHASE2_METAL_KERNEL_INTEGRATION.md  PHASE2_PLAN.md  SECURITY_FIXES.md  SESSION_2025_11_06.md  SESSION_2025_11_06_INTEGRATION.md  SESSION_2025_11_07_MODEL_LOADING.md  TEST_FIXES.md  TEST_IMPLEMENTATION.md
examples/: CMakeLists.txt  README.md  cached_model_test.cpp  kv_cache_test.cpp  metal_kernel_test.cpp  simple_generation.cpp
plan/: FrontendImplementation.md  FrontendPlan.md  MacosPlan.md  MetalKernelsPlan.md  PackagingDistro.md  SPEC01.md  Structure.md
scripts/: build_app.sh  build_metal.sh  create_dmg.sh  create_xcode_project.sh  download_test_models.py  install_homebrew_deps.sh  setup_xcode_project.sh  sign_app.sh
sdks/python/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
sdks/python/examples/: README.md  async_chat.py  basic_chat.py  embeddings.py  health_and_metrics.py  model_management.py  ollama_generate.py  streaming_chat.py
sdks/python/mlxrunner/: __init__.py  async_client.py  cli.py  client.py  exceptions.py  ollama_api.py  openai_api.py  transport.py  types.py
sdks/swift/: .gitignore  LICENSE  Package.swift  README.md
sdks/swift/Examples/: ChatCompletion.swift  Embeddings.swift  ModelList.swift  OllamaGenerate.swift  README.md
sdks/typescript/: .eslintrc.json  .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/examples/: README.md  completions.ts  embeddings.ts  model-management.ts  ollama-chat.ts  openai-chat.ts  package.json
sdks/typescript/src/: index.ts
test_models/: README.md
tests/: CMakeLists.txt  README.md  test_metal_compilation.py
tests/unit/: gguf_parser_test.cpp  grpc_server_test.cpp  layers_test.cpp  metrics_test.cpp  mmap_loader_test.cpp  model_registry_test.cpp  ollama_api_test.cpp  rest_server_test.cpp  rmsnorm_primitive_test.cpp  scheduler_test.cpp  scheduler_worker_test.cpp  speculative_decoder_test.cpp  sse_stream_test.cpp  tensor_test.cpp  test_model_loader_gguf.cpp  test_model_loader_integration.cpp  test_model_loader_pager.cpp  test_model_loader_weights.cpp  tokenizer_test.cpp
tools/: CMakeLists.txt  README.md  convert_hf_to_mlx.py  mlx  requirements.txt  validate_configs.cpp  validate_configs.py
(+122 files in other folders)
